--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "html5-boilerplate": "~4.3.0",
     "ngInfiniteScroll": "latest",
     "angular-ui-select": "latest",
+    "angular-slider":"latest",
     "angular-underscore-module": "latest",
     "bootstrap":"~3"
   }
